[gd_scene load_steps=12 format=2]

[ext_resource path="res://assets/sprites/characters/team_d_campaigner.png" type="Texture" id=1]
[ext_resource path="res://scripts/map/player_character.gd" type="Script" id=2]
[ext_resource path="res://assets/fonts/nokiafc22.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://assets/shaders/OutlineShader.tres" type="Shader" id=4]
[ext_resource path="res://assets/sprites/speech_bubble.png" type="Texture" id=5]

[sub_resource type="ShaderMaterial" id=2]
shader = ExtResource( 4 )
shader_param/line_color = Color( 0, 0, 0, 1 )
shader_param/line_thickness = 2.0

[sub_resource type="DynamicFont" id=5]
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=6]
size = 18
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 3 )

[sub_resource type="Animation" id=3]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 48, 48 ) ]
}

[sub_resource type="Animation" id=4]
resource_name = "walk"
length = 0.16
step = 0.01
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.05, 0.09, 0.12, 0.16 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 48, 48 ), Vector2( 48, 40 ), Vector2( 48, 48 ), Vector2( 48, 40 ), Vector2( 48, 48 ) ]
}

[sub_resource type="Animation" id=7]
resource_name = "wobble"
length = 0.25
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.05, 0.1, 0.15, 0.2, 0.25 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 48, 48 ), Vector2( 60, 48 ), Vector2( 36, 48 ), Vector2( 60, 48 ), Vector2( 36, 48 ), Vector2( 48, 48 ) ]
}

[node name="PlayerCharacter" type="Node2D"]
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
material = SubResource( 2 )
position = Vector2( 48, 48 )
texture = ExtResource( 1 )
flip_h = true

[node name="MessageRichTextLabel" type="RichTextLabel" parent="."]
visible = false
margin_left = -16.0
margin_top = -30.0
margin_right = 112.0
margin_bottom = 37.0
custom_fonts/normal_font = SubResource( 5 )
bbcode_enabled = true
bbcode_text = "
[wave amp=30 freq=6]Disconnected[/wave]"
text = "
Disconnected"

[node name="SpeechBubble" type="TextureRect" parent="."]
self_modulate = Color( 1, 1, 1, 0.705882 )
margin_left = 36.0
margin_top = -86.0
margin_right = 156.0
margin_bottom = 34.0
texture = ExtResource( 5 )

[node name="MarginContainer" type="MarginContainer" parent="SpeechBubble"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 26.0
margin_top = 16.0
margin_right = -2.0
margin_bottom = -16.0

[node name="SpeechLabel" type="Label" parent="SpeechBubble/MarginContainer"]
margin_right = 92.0
margin_bottom = 88.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = SubResource( 6 )
text = "Vote foxes!"
align = 1
valign = 1
autowrap = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 3 )
anims/walk = SubResource( 4 )
anims/wobble = SubResource( 7 )

[node name="MessageTimer" type="Timer" parent="."]
one_shot = true
